@@ -3,7 +3,10 @@ package tech.edwyn;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import tech.edwyn.models.*;
+import tech.edwyn.models.enums.IngredientName;
+import tech.edwyn.models.enums.Unit;
 
+import java.util.Arrays;
 import java.util.List;
 
 
@@ -13,13 +16,16 @@ public class CoffeeMakerTest {
     public void shouldMakeCoffeeWithEspressoIngredient() {
 
         // given
-        Coffee espresso = new Espresso();
-        List<Ingredient> ingredients = List.of(new Ingredient(IngredientName.BEANS, 7, Unit.GR),
+        List<Ingredient> ingredients = Arrays.asList(new Ingredient(IngredientName.BEANS, 7, Unit.GR),
                 new Ingredient(IngredientName.WATER, 37, Unit.ML));
+
+        Coffee espresso = new Espresso(ingredients);
+
+        DrinkMaker drinkMaker = new DrinkMaker();
 
         String result = "Coffee{coffeeType=ESPRESSO, ingredients=[Ingredient{name='BEANS', quantity=7, unit=GR}, Ingredient{name='WATER', quantity=37, unit=ML}]}";
         // when
-        espresso = espresso.createCoffee(CoffeeType.ESPRESSO, ingredients);
+        drinkMaker.createCoffee(espresso);
 
         //then
         Assertions.assertEquals(result, espresso.toString());
@@ -29,11 +35,14 @@ public class CoffeeMakerTest {
     public void shouldThrowExceptionWithCoffeeInvalidIngredient() {
 
         // given
-        Coffee espresso = new Espresso();
-        List<Ingredient> ingredients = List.of(new Ingredient(IngredientName.BEANS, 7, Unit.GR),
+        List<Ingredient> ingredients = Arrays.asList(new Ingredient(IngredientName.BEANS, 7, Unit.GR),
                 new Ingredient(IngredientName.WATER, 347, Unit.ML));
+
+        Coffee espresso = new Espresso(ingredients);
+
+        DrinkMaker drinkMaker = new DrinkMaker();
         // when
-        IllegalArgumentException thrown = Assertions.assertThrows(IllegalArgumentException.class, () -> espresso.createCoffee(CoffeeType.ESPRESSO, ingredients));
+        IllegalArgumentException thrown = Assertions.assertThrows(IllegalArgumentException.class, () -> drinkMaker.createCoffee(espresso));
 
         //then
         Assertions.assertEquals("Ingredients is not valid", thrown.getMessage());
@@ -43,17 +52,19 @@ public class CoffeeMakerTest {
     public void shouldMakeCoffeeWithAmericanoIngredient() {
 
         // given
-        Coffee coffee = new Americano();
-
-        List<Ingredient> ingredients = List.of(new Ingredient(IngredientName.BEANS, 7, Unit.GR),
+        List<Ingredient> ingredients = Arrays.asList(new Ingredient(IngredientName.BEANS, 7, Unit.GR),
                 new Ingredient(IngredientName.WATER, 100, Unit.ML));
+
+        Coffee americano = new Americano(ingredients);
+
+        DrinkMaker drinkMaker = new DrinkMaker();
 
         String result = "Coffee{coffeeType=AMERICANO, ingredients=[Ingredient{name='BEANS', quantity=7, unit=GR}, Ingredient{name='WATER', quantity=100, unit=ML}]}";
         // when
-        coffee = coffee.createCoffee(CoffeeType.AMERICANO, ingredients);
+        drinkMaker.createCoffee(americano);
 
         //then
-        Assertions.assertEquals(result, coffee.toString());
+        Assertions.assertEquals(result, americano.toString());
     }
 
 
@@ -61,18 +72,20 @@ public class CoffeeMakerTest {
     public void shouldMakeCoffeeWithLatteIngredient() {
 
         // given
-        Coffee latte = new Latte();
-
-        List<Ingredient> ingredients = List.of(new Ingredient(IngredientName.BEANS, 7, Unit.GR),
+        List<Ingredient> ingredients = Arrays.asList(new Ingredient(IngredientName.BEANS, 7, Unit.GR),
                 new Ingredient(IngredientName.WATER, 37, Unit.ML),
                 new Ingredient(IngredientName.MILK, 170, Unit.ML));
+
+        Coffee latte = new Latte(ingredients);
+
+        DrinkMaker drinkMaker = new DrinkMaker();
 
         String result = "Coffee{coffeeType=LATTE, ingredients=[Ingredient{name='beans', quantity=7, unit=GR}, " +
                 "Ingredient{name='WATER', quantity=37, unit=ML}, " +
                 "Ingredient{name='MILK', quantity=170, unit=ML}]}";
 
         // when
-        latte = latte.createCoffee(CoffeeType.LATTE, ingredients);
+        drinkMaker.createCoffee(latte);
 
         //then
         Assertions.assertTrue(result.equalsIgnoreCase(latte.toString()));
